src/objects/TR1__EMail__c.object
<CustomObject>
    <fields>
        <fullName>TR1__BCC__c</fullName>
        <label>BCC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__CC__c</fullName>
        <label>CC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Call_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call List</label>
        <referenceTo>TR1__Call_List__c</referenceTo>
        <relationshipLabel>Talent Rover Emails</relationshipLabel>
        <relationshipName>TREmails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_IDs__c</fullName>
        <label>Contact IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__EmailField__c</fullName>
        <label>Email Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PlainBody__c</fullName>
        <label>PlainBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__To__c</fullName>
        <label>To</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>TEXT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EMail</label>
    <nameField>
        <displayFormat>EM-{0000000000}</displayFormat>
        <label>EMail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>